--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -88,11 +88,11 @@ List all the bookmarked favourite recipes of the user. +
 Format: +
 `-favourite`
 
-==== Display ingredient manager: `-ingredientmanager`
+==== Display ingredient manager: `-ingredient`
 Ingredient manager is an inventory manager that helps stock
 tracking of existing ingredient available at home. +
 Format: +
-`-ingredientmanager`
+`-ingredient`
 
 ==== Display meal planner: `-mealplanner`
 Display current meal plan. shows the planned meals for breakfast,
@@ -220,7 +220,7 @@ Edit an existing ingredient in the ingredient manager. +
 Format: +
 `edit INDEX FIELD_NAME NEW_INFO (FIELD_NAME NEW_INFO)… end`
 
-==== Search ingredient: `find`
+==== Find ingredient: `find`
 
 Find ingredients whose name contains any of the given keywords.
 Format: +
@@ -238,24 +238,45 @@ Delete ingredient(s) added by user.
 Format: +
 `delete INDEX`
 
-==== Search recipes based on ingredients: `inventory`
+==== Clear : `clear`
 
-By default, recipes are sorted with the ingredients in ingredient manger. That is, a recipe which uses most number of
- ingredients in ingredient manager is located at the top
-User can add
-additional
-parameters to
-widen search result.
+Clears all the meal slots of the meal planner.
+
+Format: `clear`
+
+// tag::cross[]
+=== Recipe-Ingredient Query Commands
+
+==== View Recipe based on Ingredients
+By default, the list has recipes that are stored in normal recipe list. User can filter, sort the recipe list with
+based on ingredients. +
 Format: +
-`recipe [NUMBER_OF_SERVINGS] must KEYWORD… optional KEYWORD…`
+`recipe NUMBER_OF_SERVINGS include [inventory] KEYWORD... prioritize [inventory] KEYWORD...` +
+****
+* "include" keyword filters the recipes based on following ingredients. +
+* "prioritize" keyword sorts the recipes based on number of following ingredients it contains. Recipe containing the
+most number of following ingredients would placed high in order. +
+* "inventory" keyword either following "include" or "prioritize", provides all the ingreident in Ingredient
+Manager
+as parameter to keyword it follows. +
+* "inventory" keyword is optional, but it should directly follow "include" keyword or "prioritize" keyword.
+****
 
+==== View needed amount of ingredients for a Recipe
+For specific recipe, user can view how much ingredient she should prepare additionally, with select command following
+ cross find command. It refers to Ingredient Manager to get the amount of ingredients the user currently have. +
+Format: +
+`select INDEX` +
 ****
-* "must" and "optional" keywords are optional. User can type both of them, one of them, or none of them(e.g. just key
- in
-"inventory").
-* Search result guarantees Keywords entered after “must”.
-* Search result that aligns with keywords after “optional” are placed higher in order.
+* Amount of needed ingredients is calculated based on the information in Ingredient Manager. +
+e.g. Number of Servings *
+ Total Amount in Recipe - Amount that user already have(in Ingredient Manager)
 ****
+==== List all recipes: `list`
+
+Shows a list of recipes. +
+Format: +
+`list`
 
 // tag::mealplanner[]
 === Meal Planner Commands
@@ -392,7 +413,7 @@ Format: +
 * Display recipe suggestion: `-suggest`
 * Display new recipe: `-surprise`
 * Display favorites: `-favourite`
-* Display ingredient manager: `-ingredientmanager`
+* Display ingredient manager: `-ingredient`
 * Display meal planner: `-mealplanner`
 * Exit application: `-exit`
 
@@ -416,11 +437,18 @@ end`
 
 * Add an ingredient: `add NAME AMOUNT SERVING_UNIT DATE`
 * List all ingredients: `list`
+* Clear all ingredients: `clear`
 * Edit ingredient info:`edit INDEX FIELD_NAME NEW_INFO (FIELD_NAME NEW_INFO)… end`
 * Search ingredient: `find KEYWORD…`
 * Delete ingredient: `delete INDEX`
-* Search recipes based on ingredients manager availability: `inventory [NUMBER_OF_SERVINGS] must KEYWORD… optional
-KEYWORD… end`
+
+*Recipe-Ingredient Query Commands*
+
+* View Recipe based on Ingredients: `recipe NUMBER_OF_SERVINGS include [inventory] KEYWORD…​ prioritize [inventory]
+KEYWORD…​`
+* View needed amount of ingredients for a Recipe: `select INDEX`
+* List all recipes: `list`
+
 
 *Meal Planner Commands*
 
