--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -512,22 +512,23 @@ The UI has been redesigned to implement the following UI elements required for t
 
 Animations will also be incorporated into the UI elements for a better user experience.
 
-==== Budget Panel
+==== totalBudget Panel
 
-The totalBudget panel consists of 3 UI elements:
+The ``totalBudget` panel consists of 3 UI elements:
 
 *	`BudgetPanel#expenseDisplay` – A `Text` element that displays the user’s current expenses.
-*	`BudgetPanel#budgetDisplay` – A `Text` element that displays the user’s monthly totalBudget cap.
-*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current totalBudget cap that has been used.
+*	`BudgetPanel#budgetDisplay` – A `Text` element that displays the user’s monthly budget cap.
+*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current `totalBudget cap that has been used.
 
 Given below is an example scenario of how `BudgetPanel` is updated:
 
 . The user launches the application and signs up for a new account. The `MainWindow` creates a new `BudgetPanel`, which elements are initialized as follows:
 * `BudgetPanel#expenseDisplay` is green and set to "$0.00".
-* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default totalBudget.
+* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default ``totalBudget`.
 * `BudgetPanel#budgetBar` is green and at 0% progress.
 
-. The user executes the command `add n/Lunch $/30.00 c/Food`. As the `'add` command modifies the totalBudget and expenses, `AddCommand#execute()` will post a `UpdateBudgetPanelEvent` event to the EventsCenter.
+. The user executes the command `add n/Lunch $/30.00 c/Food`. As the `'add` command modifies the `totalBudget` and
+expenses, `AddCommand#execute()` will post a `UpdateBudgetPanelEvent` event to the EventsCenter.
 [NOTE]
 If a command fails its execution, the `UpdateBudgetPanelEvent` will not be posted.
 
@@ -546,9 +547,11 @@ If the updated percentage is more than 1.0, `BudgetPanel#budgetBar` progress per
 
 . `Timeline#playFromStart()` is called to execute the animation.
 
-. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()``. The method detects that the user has gone over totalBudget, and changes the color of `BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` from green to red.
+. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()``. The method detects that the user has gone
+over budget, and changes the color of `BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` from green to red.
 [NOTE]
-Similarly, if the user has gone from over totalBudget to under totalBudget, the color of 'BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` should change from red to green.
+Similarly, if the user has gone from over budget to under budget, the color of
+'BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` should change from red to green.
 
 The following sequence diagram shows the process of updating the `BudgetPanel` UI elements:
 
@@ -574,7 +577,7 @@ image::implementation/BudgetPanelSequenceDiagram.png[width="800"]
 The budget feature allows the user to set a budget for a specific time period.
 If the user's total spending exceeds their budget in the specified time period, a warning will be shown to the user.
 
-The current implementation for totalBudget tracking is described as below.
+The current implementation for `totalBudget` tracking is described as below.
 
 ===== Setting a budget
 
@@ -594,7 +597,7 @@ image::implementation/BudgetCommandSequenceDiagram.png[width="800"]
 . The budget is then updated.
 
 
-===== Recurring totalBudget
+===== Recurring budget
 
 Every time a user logs in, `Model#loadUserData()` is called and  the application will check if the user has set a time
 where the
@@ -631,7 +634,7 @@ returned to
 `LogicManager`.
 
 . `LogicManager` then calls `SetRecurringBudgetCommand#execute()`,which calls `ModelManager#setRecurrenceFrequency()`
-method to update the time where the next totalBudget is reset.
+method to update the time when the next spendings of `totalBudget` is reset.
 
 ===== Budget by Category
 . User enters command `addCategoryBudget c/School b/2.00`. The command is received by `ExpenseTrackerParser`
@@ -654,7 +657,8 @@ method to add a `Budget` to a `Category`.
 ===== Notification center (Proposed)
 There is an area for the app to display notifications and additional information to the users beside the usual
 area below the command box. This is particularly useful to the *Budget* feature as budgets should not obstruct the
-usage of the expense tracker, but rather provide helpful information. For example, if a user exceeds his totalBudget after
+usage of the expense tracker, but rather provide helpful information. For example, if a user exceeds his total budget
+ after
  adding an expense, a warning would be displayed in the *Notification center* instead of the area below the command
  box, replacing the success message of adding an expense and confusing the user.
 
@@ -918,25 +922,25 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* * *` |user who wants to track their spending |add a new expense |have the app keep track of my expenses
 
-|`* * *` |clumsy user |delete inaccurately added expenditure |have an accurate recording of my expenditures and totalBudget
+|`* * *` |clumsy user |delete inaccurately added expenditure |have an accurate recording of my expenditures and `totalBudget
 
-|`* * *` |clumsy user |edit inaccurately added expenditure |have an accurate recording of my expenditures and totalBudget
+|`* * *` |clumsy user |edit inaccurately added expenditure |have an accurate recording of my expenditures and `totalBudget
 
 |`* * *` |user |have my expenditures saved after closing the app |keep track of my expenditures without having to key in my information again
 
-|`* * *` |forgetful user |receive a notification about my totalBudget when the application boots up |be reminded of how much I have spent and can spend.
+|`* * *` |forgetful user |receive a notification about my `totalBudget when the application boots up |be reminded of how much I have spent and can spend.
 
 |`* * *` |user |exit the application with a keyboard command | exit the application conveniently without reaching for my mouse/touchpad
 
-|`* * *` |impulsive spender |set my maximum totalBudget over a certain period of time |know when I am or about to spend over my totalBudget
+|`* * *` |impulsive spender |set my maximum `totalBudget over a certain period of time |know when I am or about to spend over my `totalBudget
 
-|`* * *` |user who has a limited totalBudget |view my expenses over a certain period of time |learn from my past endeavours and better manage my totalBudget
+|`* * *` |user who has a limited `totalBudget |view my expenses over a certain period of time |learn from my past endeavours and better manage my `totalBudget
 
 |`* * *` |user who wants to save money |separate my expenses into different categories| ee where am I spending more money on and where my expenses go and cut them accordingly
 
 |`* *`| user who shares a computer |add new account/log in to own account |use the application on the same computer as someone else
 
-|`* *` |user who has a monthly allowance |set my totalBudget based on my monthly allowance |
+|`* *` |user who has a monthly allowance |set my `totalBudget based on my monthly allowance |
 
 |`* *` |user who spends on the same things frequently |add recurring expenses |do not need to key in the same type of expenditure every month
 |=======================================================================
@@ -957,7 +961,7 @@ _{More to be added}_
 
 1. User adds expenditure record
 2. Once validated, ExpenseTracker shows success message and details of the expenditure
-3. If expenditure causes totalBudget to be below a certain threshold, show a warning message to the user
+3. If expenditure causes `totalBudget` to be below a certain threshold, show a warning message to the user
 +
 Use case ends.
 
@@ -993,13 +997,13 @@ Use case ends
 Use case ends
 
 [discrete]
-=== Use case: Set totalBudget
+=== Use case: Set `totalBudget`
 
 *MSS*
 
-1. User requests to set totalBudget
-2. Expense tracker prompts user to key in totalBudget
-3. User keys in totalBudget value
+1. User requests to set `totalBudget`
+2. Expense tracker prompts user to key in `totalBudget`
+3. User keys in `totalBudget` value
 4. Expense tracker prompts and updates budgets
 +
 Use case ends
@@ -1008,7 +1012,7 @@ Use case ends
 [none]
 * 2a. Budget is already set
 [none]
-** 2a1. Expense tracker prompts user the previously set totalBudget and asks if user wants to continue
+** 2a1. Expense tracker prompts user the previously set `totalBudget` and asks if user wants to continue
 ** 2a2. User confirmed that he/she wants to continue
 +
 Use case resumes step 2
@@ -1075,9 +1079,9 @@ Use case ends
 
 *MSS*
 
-1. User requests to clear his recorded expenses and totalBudget
+1. User requests to clear his recorded expenses and `totalBudget`
 2. Expense trackers shows a confirmation message
-3. Expense tracker deletes all information about the current user’s totalBudget and expenses
+3. Expense tracker deletes all information about the current user’s `totalBudget` and expenses
 +
 Use case ends
 
@@ -1098,10 +1102,10 @@ Use case ends
 *MSS*
 
 1. User keys in the command to turn on notifications
-2. Expense tracker already has a totalBudget set.
-3. Add expenses until the totalBudget has been exceeded
-4. Expense tracker will detect that the totalBudget has been exceeded
-5. Expense tracker will show a visible notification to alert the user that the totalBudget has been exceeded
+2. Expense tracker already has a `totalBudget` set.
+3. Add expenses until the `totalBudget` has been exceeded
+4. Expense tracker will detect that the `totalBudget` has been exceeded
+5. Expense tracker will show a visible notification to alert the user that the `totalBudget` has been exceeded
 +
 Use case ends
 
@@ -1111,7 +1115,7 @@ Use case ends
 *MSS*
 
 1. User keys in command to turn off notifications
-2. Notifications no longer show whenever the set totalBudget has been exceeded.
+2. Notifications no longer show whenever the set `totalBudget` has been exceeded.
 3. Any notification that is currently showing will be hidden from the user.
 +
 Use case ends
@@ -1133,7 +1137,7 @@ Use case ends
 
 *MSS*
 
-1. User keys in command to view the information and statistics of his weekly/monthly/yearly totalBudget
+1. User keys in command to view the information and statistics of his weekly/monthly/yearly `totalBudget`
 2. Programs loads a window consisting of visual information displaying the relevant information
 +
 Use case ends
