--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -244,12 +244,83 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 
 This section describes some noteworthy details on how certain features are implemented.
 
+// tag::byNameCommands[]
+=== By-Name-Commands Feature
+==== General Current Implementation
+
+The "by-name-commands" are extensions to the regular Commands, facilitated by classes that extend the regular `Command` classes. Currently implemented are the `EditByNameCommand` and the `DeleteByNameCommand`.
+They make use of `String` identifiers and the `PersonFinderUtil` to find the `Person` that the `Command` refers to, rather than an `Index`. +
+This allows time to be saved when trying to run a command, because instead of having to `find` a `Person` then type the command based on the `Index` of the list that the `Person` appears under, commands can be targeted swiftly and precisely.
+The "by-name-commands" depend on the following operation/classes:
+
+* `PersonFinderUtil#findPerson(Model model, String personIdentifier)` -- Finds and returns the person that is uniquely identified by the `personIdentifier` in the `Model` provided.
+* `NameContainsAllKeywordsPredicate` -- Tests as true when a person's name matches all the keywords in the command's arguments.
+** The `findPerson` method makes use of the `NameContainsAllKeywordsPredicate`, which is in contrast to the `NameContainsKeywordsPredicate` used in the `FindCommand`.
+** When editing by name, we need a more specific filter, rather than a general one. Instead of finding a Person that contains at least one identifier term in their name, the Person found must contain *all* identifier terms in their name.
+
+Note: in the following section, the shorthand format `_ByNameCommand` and `_Command` when used in the same context will refer to a similar type of command, e.g. `DeleteByNameCommand` and `DeleteCommand`, but `__` is general to refer to either `Delete` or `Edit`.
+
+==== Design Considerations
+===== Aspect: Whether a `_ByNameCommand` should Extend the Regular `_Command`
+* **Alternative 1 (current choice):** It extends the `Command`.
+** Pros: Due to polymorphism, a `_ByNameCommand` can replace instances of `_Command` seamlessly in the code without having to
+change many parts to add this additional feature. It also makes sense, because a `_ByNameCommand` "is a" `_Command` (e.g. an `EditByNameCommand` is an `EditCommand`)
+** Cons: There is an unused field in `EditCommand` (`index`).
+* **Alternative 2:** Create a new `_ByNameCommand`, standalone from the `_Command`
+** Pros: Can save a bit of memory space on execution, since parts of the `_Command` that are not used do not provide extra baggage to the `_ByNameCommand` (e.g. no extra `Index` in the `EditByNameCommand`)
+** Cons: There is a need to modify more parts of the Logic component in the code base to accommodate a new command.
+
+===== Aspect: When the Person is Searched/Matched
+* **Alternative 1 (current choice):** During the execution of `execute`
+** Additional details: A `String personIdentifier` will be stored in the command, and upon `execute`, a person is first matched, then the edit is carried out.
+** Pros: Execute takes in the model as an argument, making searching for a Person convenient.
+** Cons: The same `EditByNameCommand` executed at a different time can have a different result since it does not have a unique Person, but a identifier to find a name.
+* **Alternative 2:** Before creation of the command
+** Additional details: The command will have a `Person`
+** Pros: The command is deterministic, since it targets a unique Person.
+** Cons: Need to gain access to the model before the person can be found, which is not usually done by AddressBookParser; high level changes are necessary.
+
 // tag::editByName[]
-=== Edit By Name feature
-==== Current Implementation
+==== Edit By Name feature
+===== Current Implementation
 
 The edit by name mechanism is facilitated by the new `Command`, `EditByNameCommand`.
 It extends `EditCommand` with a "Person Identifier" String that is used in place of the Index (of a displayed list) used in the normal `EditCommand`.
+Additionally, it implements/depends on the following operations:
+
+* `EditByNameCommand#execute()` -- Executes the command encapsulated by this `EditByNameCommand`.
+
+Given below is an example usage scenario and how the EditByName mechanism behaves at each step.
+
+Step 1. The user launches the application and already has at least one client's contact in InsuRen.
+
+image::EditByNameCommand1StateDiagram.png[width="800"]
+
+Step 2. The user executes `edit Alice p/91232233` to edit Alice's phone number. However, there are more than two people with a name that matches Alice, so InsuRen notifies the user.
+
+image::EditByNameCommand2StateDiagram.png[width="800"]
+
+[NOTE]
+If a command fails its execution due to multiple or no people matching the identifier, it will not edit any contact details.
+
+Step 3. The user uses a much more specific name identifier, `edit Alice Tay Ren Ying p/91232233`, but this does not match any contact, so InsuRen notifies the user.
+
+image::EditByNameCommand3StateDiagram.png[width="800"]
+
+Step 4. The user uses a name identifier that uniquely identifies one person, `edit Alice Tay p/91232233`. The edit command is carried out, and the contact details of the identified person are changed accordingly.
+
+image::EditByNameCommand4StateDiagram.png[width="800"]
+
+The following activity diagram summarizes what happens when a user executes the `EditByNameCommand`:
+
+image::EditByNameCommandActivityDiagram.png[width="500"]
+// end::editByName[]
+// tag::deleteByName[]
+==== Delete By Name feature
+===== Current Implementation
+
+The delete by name mechanism is facilitated by the new `Command`, `DeleteByNameCommand`.
+It extends `DeleteCommand` with a "Person Identifier" String that is used in place of the Index (of a displayed list) used in the normal `DeleteCommand`.
 Additionally, it implements the following operations:
 
 * `EditByNameCommand#findPerson(Model model)` -- Finds and returns the person that is uniquely identified by the `personIdentifier` in the `Model` provided.
@@ -283,29 +354,10 @@ image::EditByNameCommand4StateDiagram.png[width="800"]
 The following activity diagram summarizes what happens when a user executes the `EditByNameCommand`:
 
 image::EditByNameCommandActivityDiagram.png[width="500"]
+// end::deleteByName[]
+// end::byNameCommands[]
 
-==== Design Considerations
 
-===== Aspect: Whether `EditByNameCommand` should Extend `EditCommand`
-* **Alternative 1 (current choice):** It extends `EditCommand`.
-** Pros: Due to polymorphism, `EditByNameCommand` can replace instances of `EditCommand` seamlessly in the code without having to
-change many parts to add this additional feature. It also makes sense, because an `EditByNameCommand` "is an" `EditCommand`.
-** Cons: There is an unused field in `EditCommand` (`index`).
-* **Alternative 2:** Create a new `Command`, standalone from `EditCommand`
-** Pros: Can save a bit of memory space on execution, since parts of `EditCommand` that are not used do not provide extra baggage to `EditByNameCommand`.
-** Cons: There is a need to modify many parts of the Logic component in the code base to accommodate a new command.
-
-===== Aspect: When the Person is Searched/Matched
-
-* **Alternative 1 (current choice):** During the execution of `execute`
-** Additional details: A `String personIdentifier` will be stored in the command, and upon `execute`, a person is first matched, then the edit is carried out.
-** Pros: Execute takes in the model as an argument, making searching for a Person convenient.
-** Cons: The same `EditByNameCommand` executed at a different time can have a different result since it does not have a unique Person, but a identifier to find a name.
-* **Alternative 2:** Before creation of the command
-** Additional details: The command will have a `Person`
-** Pros: The command is deterministic, since it targets a unique Person.
-** Cons: Need to gain access to the model before the person can be found, which is not usually done by AddressBookParser; high level changes are necessary.
-// end::editByName[]
 
 // tag::schedule[]
 === Schedule feature
