--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -337,14 +337,23 @@ Given below is an example usage scenario and how the undo/redo mechanism behaves
 
 Step 1. The user launches the application for the first time. The `VersionedCarparkFinder` will be initialized with the initial address book state, and the `currentStatePointer` pointing to that single address book state.
 
+The following diagram showcases the state at the start of the program.
+
+.State and the start of the program
 image::UndoRedoActivityDiagramNew1.png[width="800"]
 
 Step 2. The user executes `find sengkang` command to find list of car park which contain sengkang from the car park finder. The `find` command calls `Model#updateFilteredCarparkList()`, causing the modified state of the address book after the `find sengkang` command executes to be saved in the `carparkFinderStateList`, and the `currentStatePointer` is shifted to the newly inserted address book state.
 
+The following diagram shows a new state is created after the command `find segkang` is ran.
+
+.State after running find command
 image::UndoRedoActivityDiagramNew2.png[width="800"]
 
 Step 3. The user executes `clear` to clear all entries. The `clear` command also calls `Model#commitCarparkFinder()`, causing another modified address book state to be saved into the `carparkFinderStateList`.
 
+The following diagram shows a new state is created after the command `clear` is ran.
+
+.State after running find then clear command
 image::UndoRedoActivityDiagramNew3.png[width="800"]
 
 [NOTE]
@@ -352,6 +361,9 @@ If a command fails its execution, it will not call `Model#commitCarparkFinder()`
 
 Step 4. The user now decides that adding the person was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will call `Model#undoCarparkFinder()`, which will shift the `currentStatePointer` once to the left, pointing it to the previous address book state, and restores the address book to that state.
 
+The following diagram shows a new state is created after the command `undo` is ran. The state pointer is moved.
+
+.How the undo feature works in a diagram
 image::UndoRedoActivityDiagramNew4.png[width="800"]
 
 [NOTE]
@@ -359,6 +371,7 @@ If the `currentStatePointer` is at index 0, pointing to the initial car park fin
 
 The following sequence diagram shows how the undo operation works:
 
+.Sequence diagram of Undo/Redo feature
 image::Sequence Diagram - Undo.png[width="800"]
 
 The `redo` command does the opposite -- it calls `Model#redoCarparkFinder()`, which shifts the `currentStatePointer` once to the right, pointing to the previously undone state, and restores the address book to that state.
@@ -368,14 +381,21 @@ If the `currentStatePointer` is at index `carparkFinderStateList.size() - 1`, po
 
 Step 5. The user then decides to execute the command `list`. Commands that do not modify the car park finder, such as `list`, will usually not call `Model#commitCarparkFinder()`, `Model#undoCarparkFinder()` or `Model#redoCarparkFinder()`. Thus, the `carparkFinderStateList` remains unchanged.
 
+The follow diagram showcases what happen when a command that does not modify the state is used.
+
+.As the command does nothing, the state is not changed, but a new state is introduced
 image::UndoRedoActivityDiagramNew5.png[width="800"]
 
 Step 6. The user executes `clear`, which calls `Model#commitCarparkFinder()`. Since the `currentStatePointer` is not pointing at the end of the `carparkFinderStateList`, all car park finder states after the `currentStatePointer` will be purged. We designed it this way because it no longer makes sense to redo the `find sengkang` command. This is the behavior that most modern desktop applications follow.
 
+The following diagram showcases when a new command is used after an undo.
+
+.Deleting a state diagram after an undo
 image::UndoRedoActivityDiagramNew6.png[width="800"]
 
 The following activity diagram summarizes what happens when a user executes a new command:
 
+.Activity diagram of a sample command
 image::General new command.png[width="650"]
 
 ==== Design Considerations
