--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -35,7 +35,7 @@ e.g. typing help and pressing Enter will open the help window.
 .  Some example commands you can try:
 
 * *`list`* : lists all employees.
-* **`add`**`-n John Doe Marketing` : adds an employee named John Doe into the marketing department.
+* **`add`**`-n John Doe -p 98765432 -e johnd@example.com -a 311, Clementi Ave 2, #02-25 -s 10000` : adds an employee named John Doe with the email johnd@example.com, the address 311, Clementi Ave 2, #02-25, with a salary of 10,000.
 * **`find`**`J*` : finds all employees that start with J.
 * *`exit`* : exits the app
 
@@ -73,7 +73,7 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 
 Adds an employee into the system.
 
-Format: `add -n NAME [-e EMAIL] [-n NUMBER] [-s SALARY]`
+Format: `add -n NAME -e EMAIL -n NUMBER -s SALARY -a ADDRESS [-t PROJECT]`
 
 ****
 * To use this command, you must be logged in with "Department Manager" permissions.
@@ -81,33 +81,23 @@ Format: `add -n NAME [-e EMAIL] [-n NUMBER] [-s SALARY]`
 ****
 Examples:
 
-* `add -n Joshua -s 15000`
-* `add -n Raynard -e rnardha@gmail.com -n 91235678`
+* `add -n Joshua -s 15000 -e josh@gmail.com -n 81234567 -a 81 Joshua's Road  Singapore 123456`
+* `add -n Raynard -e rnardha@gmail.com -n 91235678 -s 1000 -a somewhere on earth`
 
-=== Removing an employee from my department: `remove`
+=== Removing an employee from my department: `delete`
 
 Removes an employee from the system.
 
-Format: `remove -id ID`
+Format: `delete INDEX`
 
 ****
-* To use this command, you must be logged in with "Department Manager" permissions.
+* To use this command, you must be logged in with "Remove employee" permissions.
 * All removed employees will be stored in the archive, when employee in archive is removed again it will be taken out of archive.
 ****
 
 Examples:
 
-* `remove -id S12312`
-
-=== List effectiveness of sector by profit : `sector`
-
-Lists all the sectors, sorted by more profitable sector first.
-
-Format: `sector`
-
-****
-* To use this command, you must be logged in with "Department Manager" permissions.
-****
+* `delete 3`
 
 === Sort employee display list : `sort`
 
@@ -125,42 +115,38 @@ Examples:
 * `sort -d`
 * `sort -n`
 
-=== List details of employee : `detail`
+=== List details of employee : `select`
 
-Lists the detailed information of an employee.
+Lists the detailed information of an employee. This is the same result as if the person is clicked in the GUI.
 
-Format: `detail -id ID`
-
-****
-* To use this command, you must be logged in with "Department Manager" permissions.
-****
+Format: `select INDEX`
 
 Examples:
 
-* `detail -id S12301`
+* `select 3`
 
-=== Apply for leave : `leave add`
+=== Apply for leave : `leaveapply`
 
 Apply for leave on specific dates.
 
 Format: `leave add -de DESCRIPTION -da DATE [-da DATE]`
 
 ****
-* Format of date: YYYYMMDD
+* Format of date: YYYY-MM-DD (Dashes are required)
 * The user must specify at least 1 `DATE`.
-* If the `DATE` is of an illegal format, the command will be accepted.
-* To use this command, you must be logged in as an employee.
+* The leave will be applied for all the dates specified under -da
+* If the `DATE` is of an illegal format, the command will be rejected.
 ****
 
 Examples:
 
-* `leave add -de Family holiday -da 20181018 20181019 `
+* `leaveapply -de Family holiday -da 2018-10-18 2018-10-19 `
 
-=== Search employees by name : `search`
+=== Search employees by name : `find`
 
 Search and display all employees that match the given name criteria.
 
-Format: `search NAME`
+Format: `find NAME`
 
 ****
 * NAME can be any name or parts of name.
@@ -168,9 +154,9 @@ Format: `search NAME`
 
 Examples:
 
-* `search jian yu`
+* `find jian yu`
 
-* `search doe`
+* `find doe`
 
 === Filter employees by criteria : `filter`
 
@@ -184,6 +170,7 @@ Format: `filter -CRITERIA FILTER_CRITERIA [-CRITERIA FILTER_CRITERIA]`
 * Replace `FILTER_CRITERIA` with the name or department you want to filter.
 ****
 Examples:
+
 * `filter -n Tan`
 * `filter -n Albert -d Marketing`
 
@@ -191,7 +178,7 @@ Examples:
 
 Changes the users details (such as contact information).
 
-Format: `edit INDEX [-n NAME] [-p PHONE] [-e EMAIL] [-a ADDRESS] [-s SALARY]`
+Format: `edit INDEX [-n NAME] [-p PHONE] [-e EMAIL] [-a ADDRESS] [-s SALARY] [-t PROJECT]`
 
 * Edits the person at the specified INDEX. The index refers to the index number shown in the displayed person list. The index must be a positive integer 1, 2, 3, …​
 * At least one of the optional fields must be provided.
@@ -200,23 +187,52 @@ Format: `edit INDEX [-n NAME] [-p PHONE] [-e EMAIL] [-a ADDRESS] [-s SALARY]`
 ****
 * At least one of the parameters must be provided
 * Existing values will be updated to the input values
-* More fields could be added based on any details stored on employees.
 ****
 Examples:
-****
+
 * `edit 1 -p 91234567 -e johndoe@example.com`
 * `edit 2 -n James`
-****
 
-=== Change password : `password`
+=== Change password : `passwd`
 
 Changes user password.
 
-Format: `password`
+Format: `passwd`
 
 ****
 * You will be prompted for your current password, and then your new one.
-* You must be logged in to perform this action.
+****
+
+=== View deleted employee archive : `archive`
+
+Displays the list of employees removed from the system. To delete an employee from the archive simply remove again.
+
+Format: `archive`
+
+****
+* To use this command, you must be logged in with "Department Manager" permissions.
+****
+
+=== Exiting the program : `exit`
+
+Exits the program, automatically saving data and logging you out.
+
+Format: `exit [-f]`
+
+****
+* If -f is supplied, exits without saving.
+****
+
+== Future Commands (Currently not implemented yet)
+
+=== List effectiveness of sector by profit : `sector`
+
+Lists all the sectors, sorted by more profitable sector first.
+
+Format: `sector`
+
+****
+* To use this command, you must be logged in with the required permission.
 ****
 
 === View leave summary : `leavesummary`
@@ -234,28 +250,6 @@ Format: `leavesummary`
 View income summary for the month.
 
 Format: `summary`
-
-=== View deleted employee archive : `archive`
-
-Displays the list of employees removed from the system. To delete an employee from the archive simply remove again.
-
-Format: `archive`
-
-****
-* To use this command, you must be logged in with "Department Manager" permissions.
-****
-
-
-
-=== Exiting the program : `exit`
-
-Exits the program, automatically saving data and logging you out.
-
-Format: `exit [-f]`
-
-****
-* If -f is supplied, exits without saving.
-****
 
 == FAQ
 
