--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -395,10 +395,60 @@ Displays the following information about medicines:
 ****
 Format: `medstats`
 
-==== Exporting patient records : `export`
+==== Exporting patient personal information : `exportpatients`
 
-Exports patient data. +
-Format: `exportpatient`
+Exports all patients' personal information to a csv file named `ClinicIO_patientdata.csv`. +
+Format: `exportpatients`
+
+The personal information consists of the following fields:
+****
+* Name: the patient's name.
+* Address: the patient's address.
+* Phone: the patient's phone number.
+* Email: the patient's email address.
+****
+
+==== Exporting patients appointment records : `exportpatientsappointments`
+
+Exports all patients' appointment records to csv file named `ClinicIO_patientsappointments.csv`. +
+Format: `exportpatientsappointments`
+
+Each appointment record consists of the following fields:
+****
+* Name: the patient's name.
+* Address: the patient's address.
+* Phone: the patient's phone number.
+* Email: the patient's email address.
+* Date: the appointment's date.
+* Time: the appointment's time.
+* Status: the appointment's status. May be either `APPROVED` or `CANCELLED`.
+* Type: the type of appointment. May be either `NEW` or `FOLLOW_UP`.
+****
+
+Go to <<Appointment Commands>> for more details.
+
+==== Exporting patients consultation records : `exportpatientsconsultations`
+
+Exports all patients' consultation records to csv file named `ClinicIO_patientsconsultations.csv`. +
+Format: `exportpatientsconsultations`
+
+Each consultation record consists of the following fields:
+****
+* Name: the patient's name.
+* Address: the patient's address.
+* Phone: the patient's phone number.
+* Email: the patient's email address.
+* Date: the consultation's date.
+* Arrival Time: the arrival time of the patient at the clinic.
+* Consultation Time: the consultation's start time.
+* End time: the end time of the consultation.
+* Doctor: the doctor being consulted.
+* Prescription: the prescribed ascribed to the patient.
+* Description: the doctor's notes on the patient.
+* Appointment: whether the consultation is the result of an appointment. May be either `YES` or `NO`.
+* Appointment Date: the date of the appointment resulting in the consultation. Empty if no appointment was made.
+* Appointment Time: the time of the appointment resulting in the consultation. Empty if no appointment was made.
+****
 // end::datacommands[]
 
 // tag::medicinecommands[]
@@ -562,7 +612,9 @@ e.g. `dequeuepatient 4`
 * *Appointment Statistics* : `apptstats`
 * *Doctor Statistics* : `doctorstats`
 * *Medicine Statistics* : `medstats`
-* *Export Patient Records* : `exportpatient`
+* *Export all patients' personal information* : `exportpatients`
+* *Export all patients' appointment records* : `exportpatientsappointments`
+* *Export all patients' consultation records* : `exportpatientsconsultations`
 
 === Medicine Inventory Commands
 
