--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -213,15 +213,71 @@ Format: `archive`
 * To use this command, you must be logged in with "Department Manager" permissions.
 ****
 
+=== Undoing previous command : `undo`
+
+Restores the address book to the state before the previous _undoable_ command was executed. +
+Format: `undo`
+
+[NOTE]
+====
+Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit` and `clear`).
+====
+
+Examples:
+
+* `delete 1` +
+`list` +
+`undo` (reverses the `delete 1` command) +
+
+* `select 1` +
+`list` +
+`undo` +
+The `undo` command fails as there are no undoable commands executed previously.
+
+* `delete 1` +
+`clear` +
+`undo` (reverses the `clear` command) +
+`undo` (reverses the `delete 1` command) +
+
+=== Redoing the previously undone command : `redo`
+
+Reverses the most recent `undo` command. +
+Format: `redo`
+
+Examples:
+
+* `delete 1` +
+`undo` (reverses the `delete 1` command) +
+`redo` (reapplies the `delete 1` command) +
+
+* `delete 1` +
+`redo` +
+The `redo` command fails as there are no `undo` commands executed previously.
+
+* `delete 1` +
+`clear` +
+`undo` (reverses the `clear` command) +
+`undo` (reverses the `delete 1` command) +
+`redo` (reapplies the `delete 1` command) +
+`redo` (reapplies the `clear` command) +
+
+=== Clearing all entries : `clear`
+
+Clears all entries from the address book. +
+Format: `clear`
+
+=== Logout from the system: `logout`
+
+Logouts from the system, returning to the login screen.
+Once this command is ran, the history log of the commands and undo or redo history will be cleared.
+
+Format: `logout`
+
 === Exiting the program : `exit`
 
 Exits the program, automatically saving data and logging you out.
 
-Format: `exit [-f]`
-
-****
-* If -f is supplied, exits without saving.
-****
+Format: `exit`
 
 == Future Commands (Currently not implemented yet)
 
